--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+# Jetbrains
+.idea
+
+# pre build code
+src/cache-handlers/**/*.js
